--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@mdi/font": "^5.9.55",
+    "ag-grid-community": "^33.3.2",
+    "ag-grid-vue3": "^33.3.2",
     "axios": "^1.9.0",
     "lodash": "^4.17.21",
     "pinia": "^2.0.16",
